Fix messagelist collapsed message attachment icon

--- a/Libadwaita/styles/messagelist.less
+++ b/Libadwaita/styles/messagelist.less
@@ -268,6 +268,15 @@
 		.collapsed-snippet {
 			color: @text_color_dim;
 		}
+
+		.collapsed-attachment {
+			background-image: none;
+			-webkit-mask-image: url(../static/images/message-list/icon-attachment-@2x.png);
+			-webkit-mask-repeat: no-repeat;
+			-webkit-mask-size: 15px;
+			-webkit-mask-position: 0px 5px;
+			background-color: @text_color_dim;
+		}
 	}
 }
 
